--- a/styles/header.css
+++ b/styles/header.css
@@ -6,7 +6,7 @@
   height: 96px;
   width: 100%;
   display: flex;
-  position: static;
+  position: relative;
   top: 0;
   justify-content: space-between;
   align-items: center;
@@ -55,7 +55,7 @@
   position: absolute;
   top: 96px;
   right: 20px;
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
