--- a/styles/summary.css
+++ b/styles/summary.css
@@ -9,7 +9,7 @@ body {
 .summaryMain {
   overflow: hidden;
   max-width: 100vw;
-  height: 100vh;
+  height: calc(100vh - 96px);
   background: #e5e5e6;
   margin-left: 232px;
   font-family: "Inter", sans-serif;
