--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -54,7 +54,7 @@ hr{
 .contact-details{
     margin-top: 0px;
     width: 60%;
-    height: 100vh;
+    height: calc(100vh - 96px);
     background-color: #F6F7F8;
     padding-left: 36px;
 }
