--- a/styles/board.css
+++ b/styles/board.css
@@ -598,14 +598,10 @@
   z-index: 1;
 }
 
-.desingLagrCard {
-  position: absolute;
-  top: 17px;
-  bottom: 100px;
-}
+
 
 .desingLagrCardEdit {
-  height: 100%;
+  height: 80%;
   display: flex;
   align-items: center;
 
@@ -755,6 +751,24 @@
   gap: 8px;
 }
 
+@media (max-width: 620px) {
+  .largeCardA {
+    width: 411px;
+}
+
+}
+@media (max-width: 513px) {
+  .largeCardA {
+    width: 350px;
+}
+
+}
+@media (max-width: 444px) {
+  .largeCardA {
+    width: 300px;
+}
+
+}
 @media (max-width: 375px) {
   .titleBoard {
     font-size: 47px !important;
