--- a/styles/board.css
+++ b/styles/board.css
@@ -723,15 +723,15 @@
 .underListContactBoard {
   cursor: pointer;
   position: absolute;
+  top: 55px;
   padding-inline-start: 0px;
   flex-direction: column;
   border-radius: 10px;
   background: var(--white, #FFF);
   z-index: 1;
-  max-height: 130px;
-  width: 435px;
+  max-height: 340px;
+  width: 425px;
   overflow: auto;
-  margin-top: 20px;
 }
 
 .inputRight_addTaskEdit {
@@ -744,6 +744,10 @@
   margin-top: 80px;
 }
 
+.inputRight_addTaskEditOpen {
+  margin-top: 360px !important;
+}
+
 .contactAvatarEdit {
   display: flex;
 }
@@ -754,6 +758,80 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
+}
+
+.boardpriority {
+  display: flex;
+  gap: 12px;
+  margin-top: 8px;
+}
+
+.textUrgent {
+  color: black !important;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.custom-checkbox-board {     
+  font-size: 20px;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+}
+
+.custom-checkbox-board input[type="checkbox"] {
+  display: none;
+}
+
+.custom-checkbox-board label {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  position: relative; 
+}
+
+.custom-checkbox-board label:before {
+  content: '';
+  width: 24px;
+  height: 24px;
+  background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 25 25" fill="none"%3E%3Crect x="4.68213" y="4.39673" width="16" height="16" rx="3" stroke="%232A3647" stroke-width="2"%3E%3C/rect%3E%3C/svg%3E');
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 300px; 
+}
+
+.contactList:hover .custom-checkbox-board input[type="checkbox"]:checked + label:before{
+  content: '';
+  width: 24px;
+  height: 24px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 18 19' fill='none'%3E%3Cpath d='M17 8.96582V14.9658C17 16.6227 15.6569 17.9658 14 17.9658H4C2.34315 17.9658 1 16.6227 1 14.9658V4.96582C1 3.30897 2.34315 1.96582 4 1.96582H12' stroke='%232A3647' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M5 9.96582L9 13.9658L17 2.46582' stroke='%232A3647' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 300px;
+}
+
+.custom-checkbox-board input[type="checkbox"]:checked + label:before {
+  content: '';
+  width: 24px;
+  height: 24px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18' fill='none'%3E%3Cpath d='M17 8V14C17 15.6569 15.6569 17 14 17H4C2.34315 17 1 15.6569 1 14V4C1 2.34315 2.34315 1 4 1H12' stroke='white' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M5 9L9 13L17 1.5' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 300px; /* Adjust this as needed */
+}
+
+.save-button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  margin-top: 8px;
 }
 
 @media (max-width: 620px) {
