--- a/styles/summary.css
+++ b/styles/summary.css
@@ -181,20 +181,34 @@ body {
 .tasksText {
   color: #2a3647;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 120%;
   text-decoration: none;
+  margin-top: 90px;
+}
+
+.tasksTextFeedback {
+  color: #2a3647;
+  text-align: center;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  text-decoration: none;
+  margin-top: 110px;
 }
 
 .tasksNumber {
+  position: absolute;
   color: #000;
   text-align: center;
   font-size: 64px;
   font-style: normal;
   font-weight: 600;
   line-height: 120%;
+  margin-top: -40px;
 }
 
 /* left End */
@@ -473,7 +487,17 @@ body {
   }
 
   .tasksText {
+    margin-top: 60px;
     font-size: 14px;
+  }
+  
+  .tasksTextFeedback {
+    margin-top: 80px;
+    font-size: 14px;
+  }
+  
+  .tasksNumber {
+    margin-top: -30px;
   }
 
   .summaryUrgendDeadLine {
@@ -505,10 +529,6 @@ body {
   .summary-headline {
     font-size: 61px !important;
   }
-
-  .tasksText {
-    font-size: 14px;
-  }
 }
 
 
@@ -531,6 +551,18 @@ body {
 
   .summaryHeader h1 {
     font-size: 40px;
+  }
+
+  .tasksText {
+    margin-top: 35px;
+  }
+  
+  .tasksTextFeedback {
+    margin-top: 55px;
+  }
+  
+  .tasksNumber {
+    margin-top: -50px;
   }
 
   .summaryHeader {
